# predictive-texting

./: .gitignore  README.md  pyproject.toml
src/predictive_texting/api/: main.py
src/predictive_texting/application/word_prediction/: config.py  dtos.py  interfaces.py  service.py
src/predictive_texting/domain/encoding/: character_sets.py  encoding_specs.py  key_encoder.py  key_maps.py  key_space.py  languages.py  protocols.py  schemes.py  types.py
src/predictive_texting/domain/lexicon/: completion_index.py  protocols.py  types.py  word_store.py
src/predictive_texting/domain/ranking/: frequency_ranking.py  protocols.py
src/predictive_texting/exceptions/: application.py  base.py  domain.py  infrastructure.py
src/predictive_texting/infrastructure/bootstrap/: database.py  word_prediction.py
src/predictive_texting/infrastructure/bootstrap/db/: schema.sql  schema_loader.py  seed_file_registry.py
src/predictive_texting/infrastructure/bootstrap/db/seed_files/: ENGLISH.txt
src/predictive_texting/infrastructure/repositories/: sqlite_word_repository.py
src/predictive_texting/infrastructure/utils/: acquire_lock.py  resource_loaders.py  time_utils.py
tests/: conftest.py
tests/api/: test_main.py
tests/application/: test_word_prediction_service.py
tests/infrastructure/: test_sqlite_word_repository.py
