##################################################################################
# --------------------------- Build System ---------------------------------------
[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"


##################################################################################
# --------------------------- Project --------------------------------------------
[project]
name = "predictive-text-service"
version = "0.1.0"
description = "A predictive text service demonstrating pluggable encoding schemes (T9 and QWERTY), in-memory indexing, and layered architecture with FastAPI and SQLite."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Niall O'Mahony" }]

dependencies = [
    # --- Web framework ---
    "fastapi>=0.111,<1.0",

    # --- ASGI server (dev + prod) ---
    "uvicorn[standard]>=0.30,<1.0",

    # --- PostgreSQL driver (sync, DB-API 2.0 compliant) ---
    # "psycopg[binary]>=3.2,<4.0",

    # --- Templating Engine ---
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",

    # --- Environment variable loading ---
    "python-dotenv>=1.0,<2",
]


##################################################################################
# --------------------------- Optional Dependencies ------------------------------
[project.optional-dependencies]
dev = [
    # --- testing ---
    "pytest>=8,<9",
    "pytest-cov>=5,<6",

    # --- linting / formatting ---
    "ruff>=0.12,<0.13",
    "mypy>=1.17,<2",

    # --- dependency management ---
    "pip-tools>=7.5,<8",
]


##################################################################################
# --------------------------- Hatch ----------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/predictive_texting"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/predictive_texting",
    "pyproject.toml",
    "README.md",
]


##################################################################################
# --------------------------- Pytest ---------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = ["unit", "integration", "e2e"]


##################################################################################
# --------------------------- MyPy -----------------------------------------------
[tool.mypy]
python-version = "3.13"
strict = true
disable_error_code = ["no-untyped-decorator"]


##################################################################################
# --------------------------- Ruff -----------------------------------------------
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
extend-exclude = [".venv", ".vscode"]
respect-gitignore = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
